08/07/2013
	- Change the edns-client-subnet option to use the officially defined
	  option code.

07/29/2013
	- SIG(0) signatures were incorrectly generated in some cases.
	  (patch from Tekto <tekto@geekr.de>)
	- Add NoSignature exception, thrown when attempting to validate a
	  SIG(0) in a message without one.

05/04/2013
	- The Name(String s, Name origin) constructor copies too many labels
	  when origin has been created by stripping a label.
	  (patch from Ingo Bauersachs <ingo@jitsi.org>)

04/10/2013
	- Fix Name.isAbsolute() to check that the length of the last label is
	  0, not that the last byte of the name is 0.

04/10/2013
	- 2.1.5 released

03/18/2013
	- Fix DS generation to canonicalize the DNSKEY owner name.
	  (patch from Ingo Bauersachs <ingo@jitsi.org>)

02/19/2013
	- Add Name.canonicalize() and Name.toString() variant for omitting the
	  final dot in an absolute name.

01/04/2013
	- 2.1.4 released

10/25/2012
	- Fix the Message constructor to not raise a ClassCastException when a
	  SIG or TSIG record is seen in the question section.
	  (patch from Klaus Malorny <Klaus.Malorny@knipp.de>)

9/4/2012
	- Add support for RFC 6605: Elliptic Curve Digital Signature
	  Algorithm (DSA) for DNSSEC. (original patch from
	  Marcos Sanz <sanz@denic.de>, with some local modifications)

8/31/2012
	- Add support for the TLSA record type.
	- Pass hostnames to InetAddress.getByAddress where possible.
	  (patch from Ingo Bauersachs <ingo.bauersachs@fhnw.ch>)

11/15/2011
	- Fix the ZoneTransferIn object to properly report AXFRs; this was
	  broken by the changes in 2.1.3.
	  (reported by Thomas Corte <Thomas.Corte@knipp.de>)

11/3/2011
	- Update DSRecord constructor from DNSKEYRecord to generate the
	  correct digest.
	  (patch from Marty Kube <marty@beavercreekconsulting.com>)

	- Also update the signature of the DSRecord constructor from
	  DNSKEYRecord to not take the key's footprint as a parameter, as it
	  can be derived from the key.

10/24/2011